# slackrpc

./: .gitignore  README.md
backend/: Dockerfile
backend/src/: main.py  pyproject.toml
backend/src/static/: verification.html
src/: index.js  server.js
