[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.129.0",
    "redis>=7.2.0",
    "slowapi>=0.1.9",
    "slack-cli-hooks<1.0.0",
    "sqlalchemy>=2.0.46",
    "pyjwt>=2.11.0",
]
